--- a/package.json
+++ b/package.json
@@ -22,5 +22,18 @@
   "bugs": {
     "url": "https://github.com/marcoshuck/typescript-express-firestore/issues"
   },
-  "homepage": "https://github.com/marcoshuck/typescript-express-firestore#readme"
+  "homepage": "https://github.com/marcoshuck/typescript-express-firestore#readme",
+  "devDependencies": {
+    "@firebase/app-types": "^0.3.2",
+    "@types/cors": "^2.8.4",
+    "@types/express": "^4.16.0",
+    "tslint": "^5.12.0",
+    "typescript": "^3.2.2"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "firebase-admin": "^6.4.0",
+    "firebase-functions": "^2.1.0"
+  }
 }
