ADD Firestore repository

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "An API REST created with Typescript and using Express and Firestore modules",
   "main": "./build/index.js",
   "scripts": {
-    "build": "tsc .",
-    "run": "node .",
-    "watch": "tsc . --watch && nodemon ."
+    "build": "tsc",
+    "run": "node",
+    "lint": "tslint --project tsconfig.json",
+    "watch": "tsc --watch && nodemon"
   },
   "repository": {
     "type": "git",
@@ -24,9 +25,9 @@
   },
   "homepage": "https://github.com/marcoshuck/typescript-express-firestore#readme",
   "devDependencies": {
-    "@firebase/app-types": "^0.3.2",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
+    "nodemon": "^1.18.9",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
   },
