--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start": "node",
     "lint": "tslint --project tsconfig.json",
-    "watch": "tsc --watch && nodemon"
+    "build-watch": "tsc --watch",
+    "start-watch": "nodemon"
   },
   "repository": {
     "type": "git",
