--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
-language: nodejs
+language: node_js
+node_js:
+  - "node"
 
 before_script:
-  - npm install
+  - yarn install
+  
 script:
   - npm run build
