--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "firebase-admin": "^6.4.0",
-    "firebase-functions": "^2.1.0"
+    "firebase-functions": "^2.1.0",
+    "pug": "^2.0.3"
   }
 }
