--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@firebase/app-types": "^0.3.2",
     "@types/cors": "^2.8.4",
+    "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
     "nodemon": "^1.18.9",
     "tslint": "^5.12.0",
@@ -36,6 +37,7 @@
   "dependencies": {
     "class-validator": "^0.9.1",
     "cors": "^2.8.5",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "firebase-admin": "^6.4.0",
     "firebase-functions": "^2.1.0",
