--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node",
     "lint": "tslint --project tsconfig.json",
     "build-watch": "tsc --watch",
-    "start-watch": "nodemon"
+    "start-watch": "nodemon",
+    "doc": "typedoc --out docs --mode file --name \"Typescript + Express + Firestore - API Rest\""
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "@types/express": "^4.16.0",
     "nodemon": "^1.18.9",
     "tslint": "^5.12.0",
+    "typedoc": "^0.14.0",
     "typescript": "^3.2.2"
   },
   "dependencies": {
