--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "tslint --project tslint.json",
     "build-watch": "tsc --watch",
     "start-watch": "nodemon",
+    "test": "mocha --require ts-node/register tests/**/*.ts --timeout 4000",
     "doc": "typedoc --out docs --mode file --name \"Typescript + Express + Firestore - API Rest\""
   },
   "repository": {
@@ -28,10 +29,15 @@
   "homepage": "https://github.com/marcoshuck/typescript-express-firestore#readme",
   "devDependencies": {
     "@firebase/app-types": "^0.3.2",
+    "@types/chai": "^4.1.7",
     "@types/cors": "^2.8.4",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
+    "@types/mocha": "^5.2.5",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.9",
+    "ts-node": "^7.0.1",
     "tslint": "^5.12.0",
     "typedoc": "^0.14.0",
     "typescript": "^3.2.2"
