--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-watch": "tsc --watch",
     "start-watch": "nodemon",
     "test": "mocha --require ts-node/register tests/**/*.ts --timeout 4000",
-    "doc": "typedoc src --out docs --mode file --name \"Typescript + Express + Firestore - API Rest\""
+    "doc": "typedoc --out docs --mode file --name \"Typescript + Express + Firestore - API Rest\" --exclude tests/**/*.ts"
   },
   "repository": {
     "type": "git",
