--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "tslint --project tslint.json",
     "build-watch": "tsc --watch",
     "start-watch": "nodemon",
+    "serve": "yarn build && firebase serve --only functions",
+    "shell": "yarn build && firebase functions:shell",
+    "deploy": "firebase deploy --only functions",
+    "logs": "firebase functions:log",
     "test": "mocha --require ts-node/register tests/**/*.ts --timeout 20000",
     "doc": "typedoc --out docs --mode file --name \"Typescript + Express + Firestore - API Rest\" --exclude tests/**/*.ts"
   },
@@ -38,16 +42,17 @@
     "mocha": "^5.2.0",
     "nodemon": "^1.18.9",
     "ts-node": "^7.0.1",
-    "tslint": "^5.12.0",
-    "typedoc": "^0.14.0",
+    "tslint": "^5.12.1",
+    "typedoc": "^0.14.1",
     "typescript": "^3.2.2"
   },
   "dependencies": {
+    "@google-cloud/firestore": "^0.19.0",
     "class-validator": "^0.9.1",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "firebase-admin": "^6.4.0",
+    "firebase-admin": "^6.5.0",
     "firebase-functions": "^2.1.0",
     "pug": "^2.0.3"
   }
